src/styles/_grid.scss
/*!******************************************************************************
 *     ___                  _   ____  ____
 *    / _ \ _   _  ___  ___| |_|  _ \| __ )
 *   | | | | | | |/ _ \/ __| __| | | |  _ \
 *   | |_| | |_| |  __/\__ \ |_| |_| | |_) |
 *    \__\_\\__,_|\___||___/\__|____/|____/
 *
 *  Copyright (c) 2014-2019 Appsicle
 *  Copyright (c) 2019-2023 QuestDB
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 *
 ******************************************************************************/

#grid {
  height: 100%;
  width: 100%;
  flex-direction: column;
  font-family: "Open Sans", Menlo, Monaco, Consolas, "Liberation Mono",
  "Courier New", monospace;
  overflow: hidden;
}

$row-height: 55px;
$drag-handle-z-index: 1;
$panel-left-z-index: ($drag-handle-z-index + 1);
$col-resize-ghost-z-index: ($panel-left-z-index + 1);

.qg-header-row, .qg-header-left-row {
  display: flex;
  overflow: hidden;
  min-height: $row-height;
  max-height: $row-height;
  position: relative;

  .qg-header:nth-last-child(2) {
    border-right: none !important;
  }
}

.qg-timestamp {
  color: #50fa7b;
}

.qg-null {
  color: #939393;
}

.qg-header-row,
.qg-r {
  white-space: nowrap;
}

.qg-r {
  display: flex;
  border-bottom: 1px solid #44475a;
  position: absolute;
  left: 0;
  right: 0;
}

$active-row-background: #44475a;
$row-hover-background: #333544;
$table-selection-background: #043c5c;

.qg-r-hover {
  background-color: $row-hover-background;
}

.qg-r:focus {
  outline: none;
}

.qg-last-col {
  border-right: thin dotted #44475a;
}

.qg-hover .qg-r-active:hover {
  background-color: $active-row-background;
  color: #f8f8f2;
}

.qg-r-active {
  background-color: $active-row-background;
}

.qg-stub {
  height: 100% !important;
}

.qg-stub-transparent {
  background: transparent !important;
}

.qg-header {
  padding: 10px 5px;
  cursor: default;
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none;
  background: #21222c;
  position: relative;
}

$visible-drag-handle-margin: 10px;
$drag-handle-margin: 2px;

.qg-header-name-row {
  display: flex;
  align-items: center;
  flex-direction: row-reverse;
  justify-content: flex-start;
  margin-left: $visible-drag-handle-margin + 3;
  gap: 4px;

  .qg-header-name {
    margin-left: 0;
  }
}

.qg-header-l .qg-header-name-row {
  flex-direction: row;
}

.qg-header-copy {
  display: none;
  padding: 2px;
  cursor: pointer;
  color: #bbb;
  border-radius: 3px;
  line-height: 0;
  flex-shrink: 0;
  position: relative;

  &:hover {
    color: #f8f8f2;
  }
}

.qg-header:hover .qg-header-copy,
.qg-header-copy-active {
  display: flex;
}

.qg-header-rotate {
  display: flex;
  padding: 2px;
  cursor: pointer;
  color: #bbb;
  border-radius: 3px;
  line-height: 0;
  flex-shrink: 0;

  &:hover {
    color: #f8f8f2;
  }
}

.qg-header-rotate-active {
  color: #8be9fd;

  &:hover {
    color: #8be9fd;
  }
}

.qg-ohlc-bullish {
  color: #50fa7b;
}

.qg-ohlc-bearish {
  color: #ff5555;
}

.qg-ohlc-cell {
  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

.qg-ohlc-labels {
  float: right;
}

.qg-ohlc-label-pair {
  padding-left: 1ch;
}

.qg-ohlc-label-key {
  color: #ffb86c;
}

.qg-header-border {
  position: absolute;
  margin-top: 10px;
  height: 25px;
  border-left: thin dashed #6272a4;
  right: 0;
}

.qg-header-l .qg-header-name, .qg-header-l .qg-header-type {
  text-align: left;
}

// drag handle is not inside header element, it is next to it (sibling)
.qg-col-resize-hysteresis {
  // place drag handle so that visible "line" is in the middle of it
  // to add hysteresis for the drag cursor
  width: $visible-drag-handle-margin * 2;
  height: 100%;
  top: 0;
  z-index: $drag-handle-z-index;
  position: absolute;
  // drag handle is to the right of the header
  right: 0;
  margin-right: -$visible-drag-handle-margin;
}

.qg-col-resize-hysteresis:hover {
  cursor: grab;
}

.qg-col-resize-hysteresis-enter {
  background-color: #6272a4;
  width: 5px;
  margin-top: 10px;
  margin-left: 8px;
  height: 35px;
  border-radius: 3px;
}

.qg-col-resize-ghost {
  position: absolute;
  width: $drag-handle-margin;
  background-color: #6272a4;
  height: 0;
  top: 0;
  left: 0;
  cursor: col-resize;
  z-index: $col-resize-ghost-z-index;
}

.qg-header-name, .qg-header-type {
  display: block;
  margin-left: $visible-drag-handle-margin + 3;
  padding: 0;
  text-align: right;
  overflow: hidden;
  text-overflow: ellipsis;
}

.qg-header-name {
  color: #8be9fd !important;
  font-size: medium;
}

.qg-header-type {
  color: #bbbbbb;
  font-size: x-small;
}

.qg-header-l {
  text-align: left;
  flex-direction: row-reverse;
  white-space: nowrap;
  text-overflow: ellipsis;

  .qg-header-type {
    text-align: left;
  }
}

.qg-viewport {
  overflow: auto;
  height: 100%;
}

.qg-canvas {
  position: relative;
  width: 100%;
}

.qg-c {
  position: absolute;
  padding: 4px 5px 4px 5px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-align: right;
  border-left: thin dotted #44475a;
}

.qg-c-active {
  box-shadow: inset 0 0 0 1px #8be9fd;
  background: $table-selection-background;
  border-radius: 0.4rem;
}

.qg-c-active-pulse {
  animation: pulse 1000ms 0.1s;
  z-index: 1;
}

@keyframes pulse {
  0% {
    box-shadow: #8be9fd 0 0 0 1px;
  }
  75% {
    box-shadow: #f1fa8c00 0 0 0 16px;
  }
}

.qg-panel-left {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  background: #282a36;
  // z-index of the panel must be greater than z-index of the drag handle
  z-index: $panel-left-z-index;
  // this is to make last column hysteresis fully visible (it is transparent)
  overflow: visible;
}

.qg-viewport-left {
  width: 100%;
  height: 100%;
  position: relative;
  border-right: thin solid #98999f;
  overflow-x: hidden;
  overflow-y: auto;
  // hide scrollbar for IE, Edge and Firefox
  -ms-overflow-style: none; /* IE and Edge */
  //noinspection CssUnknownProperty
  scrollbar-width: none; /* Firefox */
}

// chrome & safari
.qg-viewport-left::-webkit-scrollbar {
  display: none;
}

$left-shadow: 10px 0 30px -4px rgba(0, 0, 0, 0.75);
$top-shadow: 0 2px 5px 0 rgba(23, 23, 23, 0.86);

.qg-panel-scrolled-left {
  -webkit-box-shadow: $left-shadow;
  -moz-box-shadow: $left-shadow;
  box-shadow: $left-shadow;
}

.qg-panel-scrolled-top {
  -webkit-box-shadow: $top-shadow;
  -moz-box-shadow: $top-shadow;
  box-shadow: $top-shadow;
}

.qg-panel-left-ghost, .qg-panel-left-hysteresis, .qg-panel-left-snap-ghost, .qg-panel-left-initial-hysteresis {
  position: absolute;
  top: 0;
  margin-top: 54px;
  height: calc(100% - 54px);
  z-index: 5;
}

.qg-panel-left-ghost {
  background-color: #98999f;
  width: 2px;
  display: none;
}

.qg-panel-left-snap-ghost {
  background-color: #6272a4;
  width: 2px;
  display: none;
}

.qg-panel-left-hysteresis {
  right: 0;
  margin-right: -10px;
  width: 20px;
  cursor: grab;
}

.qg-panel-left-initial-hysteresis {
  width: 10px;
  left: 0;
  display: none;
  cursor: grab;
}

.qg-panel-left-ghost-handle {
  position: absolute;
  top: 0;
  left: 0;
  width: 6px;
  height: 30px;
  background-color: #6272a4;
  border-radius: 3px;
  margin-left: -2px;
  cursor: grab;
}

// Rotated (horizontal) bar/ohlc visualization view
.qg-rotated-container {
  width: 100%;
  height: 100%;
  overflow: hidden;
  background: #282a36;
}

.qg-rotated-scroll {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  overflow-x: auto;
  overflow-y: hidden;
  height: 100%;
}

.qg-rotated-col {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  align-items: center;
  justify-content: flex-end;
  max-height: 100%;
  border-right: thin dotted #44475a;
}

.qg-rotated-bar {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  writing-mode: vertical-rl;
  direction: rtl;
  white-space: pre;
  font-family: Menlo, Monaco, Consolas, "Liberation Mono",
    "Courier New", monospace;
  color: #f8f8f2;
  line-height: 1;
  padding: 0 0 4px 0;
}

.qg-rotated-ts {
  background: #21222c;
  color: #50fa7b;
  font-size: 10px;
  padding: 4px 2px;
  white-space: nowrap;
  border-top: 1px solid #44475a;
  text-align: center;
  flex-shrink: 0;
  box-sizing: border-box;
  overflow: hidden;
  line-height: 1.3;
}

.qg-rotated-ts-date {
  color: #bbbbbb;
  font-size: 9px;
}

